src/test/deca/codegen/valid/no-objects/assign_direct_init.ass
; Main program
; Beginning of main function:
	ADDSP #1
	LOAD #1, R0
	STORE R0, 1(GB)
	WSTR "Ok"
	WNL
; End of main function.
	HALT
