src/test/deca/codegen/invalid/no-objects/stack_overflow.ass
; Main program
; Beginning of main function:
	ADDSP #1
	LOAD #1, R0
	STORE R0, 1(GB)
; End of main function.
	HALT
